css/main.css
html {
  box-sizing: border-box;
  font-family: serif;
  line-height: 1.5;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

img {
  display: block;
  width: 40px;
}

header {
  background-color: #d05c2e;
}

.heading {
  display: flex;
  justify-content: space-between;
  align-content: center;
  width: 100%;
}

h1 {
  font-family: Merriweather, serif;
  color: #fff;
  font-size: 2rem;
  font-weight: bold;
  margin: 0;
  padding: .5rem 0;
}

ul {
  display: flex;
  text-align: center;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

li {
  font-family: Merriweather, serif;
  width: 33.33%;
  margin: 0;
  list-style: none;
}

a {
  display: block;
  text-align: center;
  border-top: 1px solid #a63f38;
  padding: .4rem 0;
  color: #fff;
  font-weight: bold;
  text-decoration: none;
}

a:first-child {
  border-right: 1px solid #a63f38;
}

a:nth-child(2) {
  border-right: 1px solid #a63f38;
}

a:hover {
  background-color: #a63f38;
}

